更新: Equation_of_motion の全体修正と Manifest.toml の追加

--- a/Equation_of_motion/notebook/test.ipynb
+++ b/Equation_of_motion/notebook/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d09670e1",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6cb7314a",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "ed6c7914",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "70eac451",
    "metadata": {},
    "outputs": [
@@ -68,13 +68,13 @@
      "output_type": "stream",
      "text": [
       "\u001b[0m\u001b[1mTest Summary: | \u001b[22m\u001b[32m\u001b[1mPass  \u001b[22m\u001b[39m\u001b[36m\u001b[1mTotal  \u001b[22m\u001b[39m\u001b[0m\u001b[1mTime\u001b[22m\n",
-      "solve_x_test  | \u001b[32m   2  \u001b[39m\u001b[36m    2  \u001b[39m\u001b[0m0.1s\n"
+      "solve_x_test  | \u001b[32m   2  \u001b[39m\u001b[36m    2  \u001b[39m\u001b[0m0.0s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Test.DefaultTestSet(\"solve_x_test\", Any[], 2, false, false, true, 1.749794707602912e9, 1.749794707711418e9, false, \"/Users/tomitatatsuki/workspace1/comphys2025/Equation_of_motion/notebook/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_W3sZmlsZQ==.jl\")"
+       "Test.DefaultTestSet(\"solve_x_test\", Any[], 2, false, false, true, 1.750401051361797e9, 1.750401051361899e9, false, \"/Users/tomitatatsuki/workspace1/compphys2025/Equation_of_motion/notebook/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_W3sZmlsZQ==.jl\")"
       ]
      },
      "metadata": {},
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e8cd1af3",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a170b3bc",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
     {
      "data": {
       "text/plain": [
-       "Test.DefaultTestSet(\"solve_v_test\", Any[], 1, false, false, true, 1.749794708022149e9, 1.749794708023961e9, false, \"/Users/tomitatatsuki/workspace1/comphys2025/Equation_of_motion/notebook/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_W5sZmlsZQ==.jl\")"
+       "Test.DefaultTestSet(\"solve_v_test\", Any[], 1, false, false, true, 1.750400587974662e9, 1.750400587976568e9, false, \"/Users/tomitatatsuki/workspace1/compphys2025/Equation_of_motion/notebook/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_W5sZmlsZQ==.jl\")"
       ]
      },
      "metadata": {},
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "ec2795b2",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "27b2cea2",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,7 @@
     {
      "data": {
       "text/plain": [
-       "Test.DefaultTestSet(\"位置と時間に依存しない場合\", Any[], 2, false, false, true, 1.749795774035983e9, 1.749795774040746e9, false, \"/Users/tomitatatsuki/workspace1/comphys2025/Equation_of_motion/notebook/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X11sZmlsZQ==.jl\")"
+       "Test.DefaultTestSet(\"位置と時間に依存しない場合\", Any[], 2, false, false, true, 1.75040058802394e9, 1.750400588035202e9, false, \"/Users/tomitatatsuki/workspace1/compphys2025/Equation_of_motion/notebook/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X10sZmlsZQ==.jl\")"
       ]
      },
      "metadata": {},
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "8fbf1c2a",
    "metadata": {},
    "outputs": [
@@ -235,13 +235,13 @@
      "text": [
       "Final x: 1.0000001033867316, Final v: 0.9999998966132629\n",
       "\u001b[0m\u001b[1mTest Summary:  | \u001b[22m\u001b[32m\u001b[1mPass  \u001b[22m\u001b[39m\u001b[36m\u001b[1mTotal  \u001b[22m\u001b[39m\u001b[0m\u001b[1mTime\u001b[22m\n",
-      "位置に依存する場合(単振動) | \u001b[32m   2  \u001b[39m\u001b[36m    2  \u001b[39m\u001b[0m0.1s\n"
+      "位置に依存する場合(単振動) | \u001b[32m   2  \u001b[39m\u001b[36m    2  \u001b[39m\u001b[0m0.0s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Test.DefaultTestSet(\"位置に依存する場合(単振動)\", Any[], 2, false, false, true, 1.749797042257212e9, 1.749797042312525e9, false, \"/Users/tomitatatsuki/workspace1/comphys2025/Equation_of_motion/notebook/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X12sZmlsZQ==.jl\")"
+       "Test.DefaultTestSet(\"位置に依存する場合(単振動)\", Any[], 2, false, false, true, 1.750400588053112e9, 1.750400588098524e9, false, \"/Users/tomitatatsuki/workspace1/compphys2025/Equation_of_motion/notebook/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X11sZmlsZQ==.jl\")"
       ]
      },
      "metadata": {},
@@ -266,10 +266,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "282cdc14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0m\u001b[1mTest Summary: |\u001b[22m\u001b[0m\u001b[1mTime\u001b[22m\n",
+      "位置と時間に依存する場合 | \u001b[36mNone  \u001b[39m\u001b[0m0.0s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Test.DefaultTestSet(\"位置と時間に依存する場合\", Any[], 0, false, false, true, 1.750400588113113e9, 1.750400588113124e9, false, \"/Users/tomitatatsuki/workspace1/compphys2025/Equation_of_motion/notebook/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X12sZmlsZQ==.jl\")"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "@testset \"位置と時間に依存する場合\" begin\n",
     "    \n",
@@ -279,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "68a773f3",
    "metadata": {},
    "outputs": [
